turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:47: error: unclosed character literal
  rule = initLangton('RLRLRLRL')
                              ^Turmite:47: error: ')' expected but something found.
  rule = initLangton('RLRLRLRL')
                              ^Turmite:66: error: ';' expected but 'def' found.
	override def run() {
                 ^